# fastcrawy

./: .gitignore  README.md  pyproject.toml
src/: run_test.py
src/fastcrawy/: __init__.py  core.py
src/fastpoint/: __init__.py  core.py
