[project]
name = "fastpoint"
version = "0.1.0"
description = "FastPoint is a micro-framework that turns your functions into production-ready FastAPI endpoints with zero boilerplate."
readme = "README.md"
authors = [
    { name = "Matthew Noates", email = "113374899+realnoates@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/eevaal/fastpoint"

keywords = ["fastapi", "wrapper", "api", "easy-to-use", "fastpoint"]

license = { text = "MIT" }


